# eigen-games-25

./: Docs.md  README.md
client/: .env  .gitignore  Cargo.toml
client/src/: cryptography.rs  images.rs  main.rs
operator-lib/: .gitignore  Cargo.toml
operator-lib/src/: main.rs  operator.rs
pinata-sdk/: README.md
services/: .env.example  .gitignore  CreateOperator.sh  Dockerfile
services/Execution_Service/: Cargo.toml
services/Execution_Service/src/: dal.service.js  main.rs  processImage.js  task.controller.js
services/Execution_Service/src/handlers/: task.rs
services/Execution_Service/src/services/: dal_service.rs  mod.rs
services/Validation_Service/: Cargo.toml
services/Validation_Service/src/: dal.service.js  main.rs  processImage.js  task.controller.js  validator.service.js
services/Validation_Service/src/services/: validation_service.rs
simple-price-oracle-avs-example/: .env  CreateOperator.sh
simple-price-oracle-avs-example/.othentic/: state.output.json
simple-price-oracle-avs-example/Execution_Service/src/: task.controller.js
simple-price-oracle-avs-example/Validation_Service/src/: dal.service.js
simple-price-oracle-avs-rust-example/: README.md
simple-price-oracle-avs-rust-example/Execution_Service/: Dockerfile
simple-price-oracle-avs-rust-example/Execution_Service/src/services/: dal_service.rs  oracle_service.rs
simple-price-oracle-avs-rust-example/Validation_Service/: Dockerfile
simple-price-oracle-avs-rust-example/Validation_Service/src/handlers/: task.rs
(+1 files in other folders)
