[package]
name = "Execution_Service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
web3 = "0.15"
secp256k1 = "0.11"
ethabi = "15.0.0"
hex = "0.4"
ethers = "2.0"
alloy = { version = "0.11.0", features = ["full"] }
alloy-sol-types = "0.8.19"
